github pages added

--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "name": "kwitter",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://mhoelzer.github.io/kwitter/",
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
