--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "homepage": "https://mhoelzer.github.io/kwitter/",
   "dependencies": {
+    "connected-react-router": "^4.5.0",
     "gh-pages": "^2.0.1",
+    "history": "^4.7.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-redux": "^5.1.1",
